# treadpal

./: .gitignore  README.md  bpm_agent.py  pyproject.toml
src/treadpal/: __main__.py  app.py  config.py  models.py
src/treadpal/api/: routes_audio.py  routes_bpm.py  routes_control.py  routes_history.py  routes_status.py
src/treadpal/audio/: beat_detector.py  bpm_detect.py  bpm_sync.py  capture.py  intensity.py
src/treadpal/ble/: ftms_client.py  ftms_protocol.py  scanner.py
src/treadpal/db/: database.py  queries.py  schema.py
tests/: test_api.py  test_bpm_sync.py  test_ftms_protocol.py
