[project]
name = "treadpal"
version = "0.1.0"
description = "BLE treadmill controller with web API and BPM sync"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "aiosqlite>=0.20,<1",
    "sounddevice>=0.5,<1",
    "numpy>=2.0,<3",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "beat-this",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "websockets>=16.0",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
aubio = [
    "aubio>=0.4.9",
]

[project.scripts]
treadpal = "treadpal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treadpal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
beat-this = { url = "https://github.com/CPJKU/beat_this/archive/main.zip" }
